--- a/customer/package.json
+++ b/customer/package.json
@@ -1,9 +1,9 @@
 {
   "name": "customer",
   "version": "1.0.0",
-  "main": "./src/app.js",
+  "main": "./src/app.ts",
   "scripts": {
-    "start": "tsc && nodemon",
+    "start": "npx ts-node && nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
